--- a/themes/SolusOS/gtk-3.0/menu.css
+++ b/themes/SolusOS/gtk-3.0/menu.css
@@ -108,7 +108,7 @@ DbusmenuGtkMenu .menu,
     border-width: 1px;
     border-color: transparent;
 
-    padding: 3px 2px 3px 2px;
+    padding: 3px 10px 3px 7px;
 
     background-image: none;
     background-color: transparent;
